--- a/.github/workflows/main_smart-task-manager-api.yml
+++ b/.github/workflows/main_smart-task-manager-api.yml
@@ -51,12 +51,12 @@ jobs:
         with:
           name: .net-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.__clientidsecretname__ }}
-          tenant-id: ${{ secrets.__tenantidsecretname__ }}
-          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
+      # - name: Login to Azure
+      #   uses: azure/login@v2
+      #   with:
+      #     client-id: ${{ secrets.__clientidsecretname__ }}
+      #     tenant-id: ${{ secrets.__tenantidsecretname__ }}
+      #     subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -65,3 +65,4 @@ jobs:
           app-name: 'smart-task-manager-api'
           slot-name: 'Production'
           package: .
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
