--- a/.github/workflows/main_smart-task-manager-api.yml
+++ b/.github/workflows/main_smart-task-manager-api.yml
@@ -65,4 +65,4 @@ jobs:
           app-name: 'smart-task-manager-api'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
